@@ -180,6 +180,7 @@ BOOL CLogPromptDlg::OnInitDialog()
 		GetDlgItem(IDC_BUGID)->SetFocus();
 	}
 	m_LogMessage.SetMarginLine(m_ProjectProperties.nLogWidthMarker);
+	m_LogMessage.SetWindowText(m_ProjectProperties.sLogTemplate);
 	m_OldLogs.LoadHistory(_T("commit"), _T("logmsgs"));
 	
 	AddAnchor(IDC_COMMITLABEL, TOP_LEFT, TOP_RIGHT);
