@@ -134,6 +134,8 @@
 #define IDS_TT_BQMESSAGE                221
 #define IDS_TT_BQNUMBER                 222
 #define IDS_TT_BQURL                    223
+#define IDS_TT_TSVNLOGTEMPLATE          224
+#define IDS_TT_TSVNLOGWIDTHMARKER       225
 #define IDC_REVISION                    1001
 #define IDC_LOCKED                      1002
 #define IDC_REPOURL                     1003
