@@ -307,6 +307,13 @@ BEGIN
     IDS_TT_BQURL            "bugtraq:url\nURL pointing to the issue tracker. It must contain ""%BUGID%"" which\ngets replaced with the issue number."
 END
 
+STRINGTABLE 
+BEGIN
+    IDS_TT_TSVNLOGTEMPLATE  "tsvn:logtemplate\nString which is inserted in the log message boxes in the commit dialogs.\nUse this as a log message templates for users to fill in."
+    IDS_TT_TSVNLOGWIDTHMARKER 
+                            "tsvn:logwidthmarker\nSet this to the number of chars the log message should not exceed its width.\nA faded line is shown in the commit dialogs at that position. The default is 80 chars."
+END
+
 #endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
