@@ -1,3 +1,4 @@
+- ADD: Log message templates. (Stefan)
 - ADD: Possibility to delete mutliple selected files at
        once in the repository browser. (Stefan)
 - CHG: Better colorization in the blame viewer. (Simon Large)
